src/objects/BillNPay__Notifications__c.object
<CustomObject>
    <description>Used for LightningPay reminders and other events</description>
    <fields>
        <fullName>BillNPay__Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BillNPay__Field__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Was Created</fullName>
                </value>
                <value>
                    <fullName>Exists</fullName>
                </value>
                <value>
                    <fullName>Was Updated</fullName>
                </value>
                <value>
                    <fullName>Greater than</fullName>
                </value>
                <value>
                    <fullName>Less than</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Does Not Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Days_from_Due_Date__c</fullName>
        <label>DEPRECATE Days from Event Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Field__c</fullName>
        <inlineHelpText>Select a field for the condition.  &quot;Account&quot; refers to Account or Contact fields associated with the Payment.  &quot;Invoice&quot; refers to fields in the Payment record.    &quot;Account Customer #&quot; is the Bill &amp; Pay User ID.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Customer #</fullName>
                </value>
                <value>
                    <fullName>Account Email</fullName>
                </value>
                <value>
                    <fullName>Account Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Account Status</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoice ID</fullName>
                </value>
                <value>
                    <fullName>Invoice Amount Due</fullName>
                </value>
                <value>
                    <fullName>Invoice Due Date</fullName>
                </value>
                <value>
                    <fullName>Invoice Address</fullName>
                </value>
                <value>
                    <fullName>Invoice Description</fullName>
                </value>
                <value>
                    <fullName>Invoice City</fullName>
                </value>
                <value>
                    <fullName>Invoice State</fullName>
                </value>
                <value>
                    <fullName>Invoice Zip Code</fullName>
                </value>
                <value>
                    <fullName>Invoice Full Name</fullName>
                </value>
                <value>
                    <fullName>Invoice Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Message_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select which Message Template should be sent</inlineHelpText>
        <label>DEPRECATE Message Template</label>
        <referenceTo>BillNPay__Message_Templates__c</referenceTo>
        <relationshipLabel>Notification Conditions</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__Notification_Event__c</fullName>
        <inlineHelpText>When should this notice be triggered</inlineHelpText>
        <label>DEPRECATE Notification Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>On Due Date</fullName>
                    <label>On Event Date</label>
                </value>
                <value>
                    <fullName>Days After Due Date</fullName>
                    <label>Days After Event Date</label>
                </value>
                <value>
                    <fullName>Days Before Due Date</fullName>
                    <label>Days Before Event Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Notification_Trigger__c</fullName>
        <label>DEPRECATE Notification Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Event_Trigger</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Value__c</fullName>
        <inlineHelpText>If using the &quot;Exists&quot; &quot;Was Updated&quot; or &quot;Was Created&quot;  condition, enter &quot;true&quot;</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notification Condition</label>
    <listViews>
        <fullName>BillNPay__All</fullName>
        <columns>NAME</columns>
        <columns>BillNPay__Field__c</columns>
        <columns>BillNPay__Condition__c</columns>
        <columns>BillNPay__Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Notification Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>